# guideline_check

./: README.md  manage.py  pyproject.toml
guideline_proj/: asgi.py  settings.py  urls.py  wsgi.py
